--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 TODO
-- [ ] auto-updates
-- [ ] logo
-- [ ] name
-- [ ] packaging
+- [-] auto-updates
+- [x] logo
+- [x] name
+- [x] packaging
 - [ ] colors for people?
 - [ ] github repo
